--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "hola": "echo holaMundo"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
